<resources>
    <string name="app_name">AmaizingNotes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_not_finish">Not_finish</string>

    <string name="title_calendar">Календарь</string>
    <string name="title_today">Сегодня</string>
    <string name="title_settings">Настройки</string>
    <string name="title_results">Достижения</string>
    <string name="current_note">current_note</string>
    <string name="delete">Удалить</string>
    <string name="not_finish">Не выполненные</string>

    <string name="id_notifications_channel">com.amaizzzing.amaizingnotes.notes</string>
    <string name="name_notifications_channel">NotesToStart</string>
    <string name="description_notifications_channel">Notes to start today</string>
    <string name="date">Дата</string>
    <string name="name_note">Название записи</string>
    <string name="text_note">Текст записи</string>
    <string name="time_start">Время начала</string>
    <string name="time_end">Время окончания</string>
    <string name="time">Время</string>
    <string name="note">Заметка</string>
    <string name="task">Задача</string>
    <string name="all">Все</string>
    <string name="week">На неделю</string>
    <string name="month">На месяц</string>

    <string name="logout_title">"Выход из аккаунта"</string>
    <string name="logout_message">"Вы уверерны?"</string>
    <string name="yes">"да"</string>
    <string name="no">"нет"</string>
</resources>
