<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_calendar">

    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.amaizzzing.amaizingnotes.view.fragments.NotificationFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notification" >
        <action
            android:id="@+id/action_navigation_notification_to_navigation_add_notes"
            app:destination="@id/navigation_add_notes"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.amaizzzing.amaizingnotes.view.fragments.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" >
        <action
            android:id="@+id/action_navigation_calendar_to_navigation_add_notes"
            app:destination="@id/navigation_add_notes"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_not_finish"
        android:name="com.amaizzzing.amaizingnotes.view.fragments.NotFinishFragment"
        android:label="@string/not_finish"
        tools:layout="@layout/fragment_not_finish" >
        <action
            android:id="@+id/action_navigation_not_finish_to_navigation_add_notes"
            app:destination="@id/navigation_add_notes"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_add_notes"
        android:name="com.amaizzzing.amaizingnotes.view.fragments.AddNoteFragment"
        android:label="AddNotes"
        tools:layout="@layout/add_note_fragment" >
        <argument
            android:name = "@string/current_note"
            android:defaultValue="-1L"
            app:argType="long" />
    </fragment>
</navigation>
