<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.AddNoteFragment">
    <ImageView
        android:id="@+id/back_add_note_fragment"
        android:layout_width="@dimen/image_size_40dp"
        android:layout_height="@dimen/image_size_40dp"
        android:layout_marginTop="@dimen/margin_7dp"
        android:layout_marginStart="@dimen/margin_15dp"
        android:layout_marginBottom="@dimen/margin_7dp"
        android:src="@drawable/ic_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ll_date_add_note_fragment"/>
    <LinearLayout
        android:id="@+id/ll_actions_add_note_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_7dp"
        android:layout_marginBottom="@dimen/margin_7dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ll_date_add_note_fragment">
        <ImageView
            android:id="@+id/btn_delete_add_note_fragment"
            android:layout_width="@dimen/image_size_40dp"
            android:layout_height="@dimen/image_size_40dp"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:src="@drawable/ic_delete_24"/>
        <ImageView
            android:id="@+id/btn_ok_add_note_fragment"
            android:layout_width="@dimen/image_size_40dp"
            android:layout_height="@dimen/image_size_40dp"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:src="@drawable/ic_ok_24"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_date_add_note_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_actions_add_note_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ll_time_add_note_fragment">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date_text_view_add_note_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_24sp"
            android:gravity="center"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_time_add_note_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_actions_add_note_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ll_date_add_note_fragment">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/time_text_view_add_note_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_24sp"
            android:gravity="center"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:gravity="center"/>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name_note_add_note_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginStart="@dimen/margin_7dp"
        android:layout_marginEnd="@dimen/margin_7dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_time_add_note_fragment">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name_note_add_note_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_note" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_text_note_add_note_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginStart="@dimen/margin_7dp"
        android:layout_marginEnd="@dimen/margin_7dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_name_note_add_note_fragment"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_text_note_add_note_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:hint="@string/text_note" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/ll_time_start_note_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_10dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/til_text_note_add_note_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ll_time_end_note_fragment">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/time_start_view_add_note_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_24sp"
            android:gravity="center"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_start"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_time_end_note_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_10dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/til_text_note_add_note_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ll_time_start_note_fragment">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/time_end_view_add_note_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_24sp"
            android:gravity="center"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_end"
            android:gravity="center"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>